// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="d-flex justify-content-between bg-dark basic-input border text-light"
  >
    <div
      className="pl-3 my-auto d-none d-md-block d-lg-none"
    >
      Expenses
    </div>
    <div
      className="pl-3 my-auto d-md-none d-lg-block"
    >
      Expense
    </div>
    <div
      className="pr-3 my-auto d-md-none d-lg-block"
    >
      Amount
    </div>
  </div>
  <div
    className="fieldarray mb-5"
  >
    <div
      className="content-container d-flex justify-content-center py-3 font-italic text-muted"
    >
      <h5>
        No expense
      </h5>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="d-flex justify-content-between bg-dark basic-input border text-light"
  >
    <div
      className="pl-3 my-auto d-none d-md-block d-lg-none"
    >
      Expenses
    </div>
    <div
      className="pl-3 my-auto d-md-none d-lg-block"
    >
      Expense
    </div>
    <div
      className="pr-3 my-auto d-md-none d-lg-block"
    >
      Amount
    </div>
  </div>
  <div
    className="fieldarray mb-5"
  >
    <ExpenseListItem
      amount={195}
      count={1}
      createdAt={0}
      description="gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      count={2}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      count={3}
      createdAt={345600000}
      description="creditcard"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
